Feat: help command Feat: TREE and CLIENT are constants

--- a/languages/en.json
+++ b/languages/en.json
@@ -1,43 +1,55 @@
 {
-  "flag" : "🇬🇧",
-  "events" : {
-      "on_ready" : {
-          "message" : "Bot Connected as {} !"
-      },
-      "member_join" : {
-            "embed_title" : "Welcome to the server {} !",
-            "embed_description" : "I'm a bot, I'm here to help you. If you need help, use `/help`."
+    "flag" : "🇬🇧",
+    "events" : {
+        "on_ready" : {
+            "command_ready" : "Command {} is registered,",
+            "bot_ready" : "Bot Connected as {} !"
         },
-      "member_remove" : {
-          "message" : "{} left the server ({}).",
-          "no_permission" : "You don't have the permission to execute this command.",
-          "no_args" : "You must provide arguments to execute this command.",
-          "cooldown" : "You must wait {} seconds before executing this command again."
-      }
-  },
-  "ban" : {
-      "command_name" : "ban",
-      "description" : "Ban someone",
-      "message" : "{} where banned for the following reason : {}"
-  },
-  "ping" : {
-      "command_name" : "ping",
-      "description" : "Answer Pong",
-      "message" : "Pong ! {}ms"
-  },
-  "changelang" : {
-      "timeout" : 30,
-      "command_name" : "changelang",
-      "description" : "Change the bot language",
-      "embed_title" : "Change the bot language",
-      "embed_description" : "To change the bot language, react to the flag corresponding to the desired language.",
-      "embed_footer" : "This message will be deleted in {} seconds.",
-      "success" : "The bot language has been changed to {} !"
-  },
-  "helloworld" : {
-      "command_name" : "helloworld",
-      "description" : "Say hello to the bot",
-      "embed_title" : "Hello World!",
-      "embed_description" : "Hello {} !"
-  }
+        "member_join" : {
+              "embed_title" : "Welcome to the server {} !",
+              "embed_description" : "I'm a bot, I'm here to help you. If you need help, use `/help`"
+          },
+        "member_remove" : {
+            "message" : "{} left the server ({})"
+        }
+    },
+    "ban" : {
+        "command_name" : "ban",
+        "command_description": "Ban someone",
+        "message" : "{} where banned for the following reason : {}"
+    },
+    "unban" : {
+        "command_name" : "unban",
+        "command_description": "Unban someone",
+        "message" : "{} where unbanned"
+    },
+    "ping" : {
+        "command_name" : "ping",
+        "command_description": "Answer Pong",
+        "message" : "Pong ! {}ms"
+    },
+    "changelang" : {
+        "timeout" : 30,
+        "command_name" : "changelang",
+        "command_description": "Change the bot language",
+        "embed_title" : "Change the bot language",
+        "embed_description" : "To change the bot language, react to the flag corresponding to the desired language",
+        "embed_footer" : "This message will be deleted in {} seconds",
+        "success" : "The bot language has been changed to {} !"
+    },
+    "helloworld" : {
+        "command_name" : "helloworld",
+        "command_description": "Say hello to the bot",
+        "embed_title" : "Hello World!",
+        "embed_description" : "Hello {} !"
+    },
+    "help": {
+        "command_name" : "help",
+        "command_description": "Display the help message",
+        "default_page" : "main",
+        "embed_title" : "Help page: {}",
+        "embed_description" : "Here is the list of available commands :",
+        "embed_field_title" : "Command: `{}`",
+        "embed_field_value" : "Description: `{}`"
+    }
 }
