--- a/languages/fr.json
+++ b/languages/fr.json
@@ -1,40 +1,55 @@
 {
-  "flag" : "🇫🇷",
-  "events" : {
-      "on_ready" : {
-          "message" : "Bot connecté en tant que {} !"
-      },
-      "member_join" : {
-            "embed_title" : "Bienvenue sur le serveur {} !",
-            "embed_description" : "Je suis un bot, je suis là pour vous aider. Pour voir la liste des commandes, utilisez `/help`."
+    "flag" : "🇫🇷",
+    "events" : {
+        "on_ready" : {
+            "command_ready" : "Commande {} prête,",
+            "bot_ready" : "Bot connecté en tant que {} !"
         },
-      "member_remove" : {
-          "message" : "{} a quitté le serveur ({})."
-      }
-  },
-  "ban" : {
-      "command_name" : "ban",
-      "description" : "Bannir quelqu'un",
-      "message" : "{} a été banni pour la raison suivante : {}"
-  },
-  "ping" : {
-      "command_name" : "ping",
-      "description" : "Répond Pong",
-      "message" : "Pong ! {}ms"
-  },
-  "changelang" : {
-      "timeout" : 30,
-      "command_name" : "changelang",
-      "description" : "Changer la langue du bot",
-      "embed_title" : "Changer la langue du bot",
-      "embed_description" : "Pour changer la langue du robot, réagissez au drapeau correspondant à la langue souhaitée",
-      "embed_footer" : "Ce message sera supprimé dans {} secondes",
-      "success" : "La langue du robot a été changée en {} !"
-  },
-  "helloworld" : {
-      "command_name" : "helloworld",
-      "description" : "Dire bonjour au bot",
-      "embed_title" : "Bonjour le monde !",
-      "embed_description" : "Salut {} !"
-  }
+        "member_join" : {
+              "embed_title" : "Bienvenue sur le serveur {} !",
+              "embed_description" : "Je suis un bot, je suis là pour vous aider. Pour voir la liste des commandes, utilisez `/help`"
+          },
+        "member_remove" : {
+            "message" : "{} a quitté le serveur ({})"
+        }
+    },
+    "ban" : {
+        "command_name" : "ban",
+        "command_description": "Bannir quelqu'un",
+        "message" : "{} a été banni pour la raison suivante : {}"
+    },
+    "unban" : {
+        "command_name" : "ubban",
+        "command_description": "Débannir quelqu'un",
+        "message" : "{} a été débanni"
+    },
+    "ping" : {
+        "command_name" : "ping",
+        "command_description": "Répond Pong",
+        "message" : "Pong ! {}ms"
+    },
+    "changelang" : {
+        "timeout" : 30,
+        "command_name" : "changelang",
+        "command_description": "Changer la langue du bot",
+        "embed_title" : "Changer la langue du bot",
+        "embed_description" : "Pour changer la langue du robot, réagissez au drapeau correspondant à la langue souhaitée",
+        "embed_footer" : "Ce message sera supprimé dans {} secondes",
+        "success" : "La langue du robot a été changée en {} !"
+    },
+    "helloworld" : {
+        "command_name" : "helloworld",
+        "command_description": "Dire bonjour au bot",
+        "embed_title" : "Bonjour le monde !",
+        "embed_description" : "Salut {} !"
+    },
+    "help" : {
+        "command_name" : "help",
+        "command_description": "Afficher la liste des commandes",
+        "default_page" : "principal",
+        "embed_title" : "Liste des commandes, page {}",
+        "embed_description" : "Voici la liste des commandes disponibles",
+        "embed_field_title" : "Commande: `{}`",
+        "embed_field_value" : "Description: `{}`"
+    }
 }
